# cors

./: .gitignore  README.md  RF updates.pptx  act.bat  cors_plot.py  experiment.py  gen.py  pyproject.toml  requirements.txt  run.py
data/: __init__.py  behaviors.py  dataset.py  generate.py  labels.py  registry.py
docs/: ARCHITECTURE.md  DATA_MODELS.md  ENGINE.md  MODELS.md
engine/: __init__.py  cache.py  metrics.py  runner.py
models/: __init__.py  base.py  model_corals.py  model_deepgraph_gnn.py  model_graph_corr_shift.py  model_mahalanobis_corr.py  model_pca_eigen_shift.py  model_pca_reconstruction.py  model_rolling_corr.py  registry.py
tests/: conftest.py  test_behaviors.py  test_cache.py  test_dataset.py  test_engine.py  test_generate.py  test_metrics.py  test_models.py  test_registry.py  test_run.py
